--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="bg-white shadow sticky top-0 z-20">
     <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
       <div class="flex items-center gap-2">
-  <img src="menu roti/logo.png" alt="Bakeryshop Logo" class="h-16 w-16 object-cover">
+  <img src="logo.png" alt="Bakeryshop Logo" class="h-16 w-16 object-cover">
       <h1 class="text-xl font-bold text-[#4B3621]">Bakeryshop</h1>
       <input id="search" type="text" placeholder="Cari roti..." 
        onkeyup="filterProducts()" 
@@ -71,13 +71,13 @@
 
   <script>
 const products = [
-  { name: "Strawberrycheesecake", price: 20000, img: "menu roti/Strawberry Cheesecake.jpg" },
-  { name: "Croissant Mentega", price: 15000, img: "menu roti/croisant.jpg" },
-  { name: "Muffin", price: 10000, img: "menu roti/muffin.jpg" },
-  { name: "Brownies", price: 15000, img: "menu roti/brownies.jpg" },
-  { name: "Strawberry puff", price: 15000, img: "menu roti/strawberry puff.jpg" },
-  { name: "Kue tart", price: 60000, img: "menu roti/kue tart.jpg" },
-  { name: "Donut", price: 10000, img: "menu roti/donat.jpg" }
+  { name: "Strawberrycheesecake", price: 20000, img: "Strawberry Cheesecake.jpg" },
+  { name: "Croissant Mentega", price: 15000, img: "croisant.jpg" },
+  { name: "Muffin", price: 10000, img: "muffin.jpg" },
+  { name: "Brownies", price: 15000, img: "brownies.jpg" },
+  { name: "Strawberry puff", price: 15000, img: "strawberry puff.jpg" },
+  { name: "Kue tart", price: 60000, img: "kue tart.jpg" },
+  { name: "Donut", price: 10000, img: "donat.jpg" }
 ];
 
 let cart = [];
@@ -184,3 +184,4 @@ function showNotification(name) {
 }
 
 </script>
+
