--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
   <script>
 const products = [
-  { name: "Strawberrycheesecake", price: 20000, img: "Strawberry Cheesecake.jpg" },
+  { name: "Strawberrycheesecake", price: 20000, img: "strawberry.cheesecake.jpg" },
   { name: "Croissant Mentega", price: 15000, img: "croisant.jpg" },
   { name: "Muffin", price: 10000, img: "muffin.jpg" },
   { name: "Brownies", price: 15000, img: "brownies.jpg" },
-  { name: "Strawberry puff", price: 15000, img: "strawberry puff.jpg" },
-  { name: "Kue tart", price: 60000, img: "kue tart.jpg" },
+  { name: "Strawberry puff", price: 15000, img: "strawberr.puff.jpg" },
+  { name: "Kue tart", price: 60000, img: "kue.tart.jpg" },
   { name: "Donut", price: 10000, img: "donat.jpg" }
 ];
 
@@ -184,4 +184,5 @@ function showNotification(name) {
 }
 
 </script>
+
 
