--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ const products = [
   { name: "Croissant Mentega", price: 15000, img: "croisant.jpg" },
   { name: "Muffin", price: 10000, img: "muffin.jpg" },
   { name: "Brownies", price: 15000, img: "brownies.jpg" },
-  { name: "Strawberry puff", price: 15000, img: "strawberr.puff.jpg" },
+  { name: "Strawberry puff", price: 15000, img: "strawberry.puff.jpg" },
   { name: "Kue tart", price: 60000, img: "kue.tart.jpg" },
   { name: "Donut", price: 10000, img: "donat.jpg" }
 ];
@@ -184,5 +184,6 @@ function showNotification(name) {
 }
 
 </script>
+
 
 
