--- a/index (2).html
+++ b/index (2).html
@@ -12,7 +12,7 @@
   <header class="bg-white shadow sticky top-0 z-20">
     <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
       <div class="flex items-center gap-2">
-        <img src="menu roti/logo.png" alt="Bakeryshop Logo" class="h-16 w-16 object-cover">
+        <img src="logo.png" alt="Bakeryshop Logo" class="h-16 w-16 object-cover">
         <h1 class="text-xl font-bold text-[#4B3621]">Bakeryshop</h1>
         <input id="search" type="text" placeholder="Cari roti..." 
           onkeyup="filterProducts()" 
@@ -81,13 +81,13 @@
 
   <script>
 const products = [
-  { id: 1, name: "Strawberry Cheesecake", price: 20000, image: "menu roti/Strawberry Cheesecake.jpg", category: "cake" },
-  { id: 2, name: "Croissant Mentega", price: 15000, image: "menu roti/croisant.jpg", category: "pastry" },
-  { id: 3, name: "Muffin", price: 10000, image: "menu roti/muffin.jpg", category: "cake" },
-  { id: 4, name: "Brownies", price: 15000, image: "menu roti/brownies.jpg", category: "cake" },
-  { id: 5, name: "Strawberry Puff", price: 15000, image: "menu roti/strawberry puff.jpg", category: "pastry" },
-  { id: 6, name: "Kue Tart", price: 60000, image: "menu roti/kue tart.jpg", category: "cake" },
-  { id: 7, name: "Donut", price: 10000, image: "menu roti/donat.jpg", category: "roti" }
+  { id: 1, name: "Strawberry Cheesecake", price: 20000, image: "strawberry.cheesecake.jpg", category: "cake" },
+  { id: 2, name: "Croissant Mentega", price: 15000, image: "croisant.jpg", category: "pastry" },
+  { id: 3, name: "Muffin", price: 10000, image: "muffin.jpg", category: "cake" },
+  { id: 4, name: "Brownies", price: 15000, image: "brownies.jpg", category: "cake" },
+  { id: 5, name: "Strawberry Puff", price: 15000, image: "strawberry.puff.jpg", category: "pastry" },
+  { id: 6, name: "Kue Tart", price: 60000, image: "kue.tart.jpg", category: "cake" },
+  { id: 7, name: "Donut", price: 10000, image: "donat.jpg", category: "roti" }
 ];
 
 let cart = [];
@@ -226,3 +226,4 @@ function showNotification(name) {
   </script>
 </body>
 </html>
+
